# ds-scaffold

./: .gitignore  README.md  pyproject.toml
src/ds_scaffold/: main.py
